--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="../public/graphik/fonts.css" />
+<link rel="stylesheet" type="text/css" href="../public/inter/inter.css" />
